src/BlogCarousel/BlogDisplay.css
.blogDisplay__container {
  display: flex;
  flex-direction: column;
  /* display: grid;
  grid-template-rows: 15rem 2rem 8rem 1rem; */
  /* justify-items: center; */
  margin-right: 1rem;
  margin-left: 1rem;
  height: 33rem;
  width: 20rem;
  background-color: rgba(27, 27, 27, 0.863);
  box-shadow: -2px -2px 2px rgba(255, 255, 255, 0.055),
    3px 3px 4px rgba(0, 0, 0, 0.9);
  margin-bottom: 3rem;
}

.blogDisplay__container:hover {
}

.blogDisplay__container:hover {
}

.blogImageContainer {
  display: flex;
  justify-self: center;
  justify-content: center;
  width: 20rem;
  height: 15rem;
}

.blogImageContainer img {
  justify-self: center;
  height: auto;
  width: 20rem;
}

.blogDisplayTitle {
  font-family: gilSans;
  letter-spacing: 0.1rem;
  color: white;
  font-weight: bold;
  font-size: 1.2rem;
  width: 100%;
  margin-top: 0.9rem;
}

.blogDisplayTitle p {
  margin-top: 0;
  margin-left: 1rem;
  margin-bottom: 8px;
  /* font-weight: bold; */
}

.blogDetails {
  color: white;
  font-family: gilSans;
  margin-left: 1rem;
  margin-right: 1rem;
  height: 6rem;
}

.blogDetails p {
  margin-top: 0;
  /* text-align: justify; */
  background: linear-gradient(
    to bottom,
    rgb(255, 255, 255),
    rgba(255, 255, 255, 0) 7rem
  );
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

.blogDetails h1 h2 h3 h4 {
  height: 0px;
  font-size: 0rem;
  margin: 0;
  color: transparent;
}

.blogDate {
  margin-top: 8px;
  display: flex;
  justify-content: flex-end;
  width: 100%;
}

.blogDate p {
  color: rgb(173, 173, 173);
  margin-right: 1rem;
}

.blogDisplayButton {
  margin: auto;
  text-decoration: none;
}

.blogDisplayButton button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 9rem;
  height: 2.5rem;
  margin: auto;
  margin-top: 0;
  margin-bottom: 1rem;
  background-color: rgba(90, 90, 90, 0.726);
  box-shadow: none;
  border: none;
  color: white;
  font-family: gilSans;
  font-weight: bold;
  letter-spacing: 1px;
  font-size: 1.1rem;
  cursor: pointer;
  text-decoration: none;
}

.blogDisplayButton button:hover {
  background-color: black;
  color: rgb(0, 217, 255);
}

